--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -11,119 +11,158 @@
 
 <!-- Responsive panel example -->
 
-<div class="row">
-    <div class="panel panel-success">
-      <div class="panel-heading">
-        <h3 class="panel-title">Add Day</h3>
+     <div class="row">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <h3 class="panel-title">Add A New Day to Itinerary</h3>
+            </div>
+            <div class="panel-body">
+              <form action="/create_day" method="post" class="form-horizontal">
+                <!-- Hidden input for authenticity token to protect from forgery -->
+                <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+                <div class="form-group">
+                    <label for="itinerary_id" class="col-sm-2 control-label">
+                      Select Itinerary
+                    </label>
+                    <div class="col-sm-10">
+                    <input type="text" id="itinerary_id" name="itinerary_id" placeholder="Itinerary" class="form-control" value="<%= @itinerary_id %>">
+                  </div>
+                </div>
+
+
+                <!-- Label and input for arrival_date -->
+                <div class="form-group">
+                  <label for="arrival_date" class="col-sm-2 control-label">
+                    Arrival date
+                  </label>
+                  <div class="col-sm-10">
+                  <div class="input-group date" id= "datetimepicker1">
+                    <input type="text" id="arrival_date" name="arrival_date" placeholder="Select Calendar for Date" class="form-control" value="<%= @day.arrival_date %>">
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                  </div>
+                </div>
+                </div>
+
+                <!--
+                <div class="form-group">
+                  <label for="start_date" class="col-sm-2 control-label">Start Date</label>
+                  <div class="col-sm-10">
+                    <div class="input-group date" id= "datetimepicker1">
+                      <input name="start_date" placeholder="Select Calendar for Date" type="text" class="form-control" id="start_date">
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                    </div>
+                  </div>
+                </div> -->
+
+                <div class="form-group">
+                <div class="col-sm-10">
+                <h3>
+                Add A New Location
+                  <a href="/locations/new" class="btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
+                </h3>
+              </div>
+              </div>
+
+                <!-- Label and input for origin_location_id -->
+                <div class="form-group">
+                  <label for="origin_location_id" class="col-sm-2 control-label">
+                    Origin location
+                  </label>
+                  <div class="col-sm-10">
+                    <%= select_tag(:origin_location_id, options_from_collection_for_select(Location.all, :id, :location_name, @day.origin_location_id), :class => "form-control") %>
+                  </div>
+                </div>
+
+                <!-- Label and input for destination_location_id -->
+                <div class="form-group">
+                  <label for="destination_location_id" class="col-sm-2 control-label">
+                    Destination location
+                  </label>
+                  <div class="col-sm-10">
+                    <%= select_tag(:destination_location_id, options_from_collection_for_select(Location.all, :id, :location_name, @day.destination_location_id), :class => "form-control") %>
+                  </div>
+                </div>
+
+                <!-- Label and input for lodging_name -->
+                <div class="form-group">
+                  <label for="lodging_name" class="col-sm-2 control-label">
+                    Lodging name
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="lodging_name" name="lodging_name" placeholder="Lodging name" class="form-control" rows="1"><%= @day.lodging_name %></textarea>
+                  </div>
+                </div>
+
+                <!-- Label and input for lodging_address -->
+                <div class="form-group">
+                  <label for="lodging_address" class="col-sm-2 control-label">
+                    Lodging address
+                  </label>
+                  <div class="col-sm-10">
+                    <input type="text" id="lodging_address" name="lodging_address" placeholder="Lodging address" class="form-control" value="<%= @day.lodging_address %>">
+                  </div>
+                </div>
+
+                <!-- Label and input for transportation -->
+                <div class="form-group">
+                  <label for="transportation" class="col-sm-2 control-label">
+                    Transportation
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="transportation" name="transportation" placeholder="Transportation" class="form-control" rows="1"><%= @day.transportation %></textarea>
+                  </div>
+                </div>
+
+                <!-- Label and input for events -->
+                <div class="form-group">
+                  <label for="events" class="col-sm-2 control-label">
+                    Events
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="events" name="events" placeholder="Events" class="form-control" rows="3"><%= @day.events %></textarea>
+                  </div>
+                </div>
+
+
+                <!-- Label and input for notes -->
+                <div class="form-group">
+                  <label for="notes" class="col-sm-2 control-label">
+                    Notes
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="notes" name="notes" placeholder="Notes" class="form-control" rows="3"><%= @day.notes %></textarea>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <div class="col-sm-offset-2 col-sm-10">
+                    <button class="btn btn-success">
+                      Create Day
+                    </button>
+                    or
+                    <a href="/days">Cancel</a>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
       </div>
-      <div class="panel-body">
-        <form action="/create_day" method="post" class="form-horizontal">
-          <!-- Hidden input for authenticity token to protect from forgery -->
-          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-          <!-- Label and input for lodging_address -->
-          <div class="form-group">
-            <label for="lodging_address" class="col-sm-2 control-label">
-              Lodging address
-            </label>
-            <div class="col-sm-10">
-              <input type="text" id="lodging_address" name="lodging_address" placeholder="Lodging address" class="form-control" value="<%= @day.lodging_address %>">
-            </div>
-          </div>
-
-          <!-- Label and input for events -->
-          <div class="form-group">
-            <label for="events" class="col-sm-2 control-label">
-              Events
-            </label>
-            <div class="col-sm-10">
-              <textarea id="events" name="events" placeholder="Events" class="form-control" rows="3"><%= @day.events %></textarea>
-            </div>
-          </div>
-
-          <!-- Label and input for origin_location_id -->
-          <div class="form-group">
-            <label for="origin_location_id" class="col-sm-2 control-label">
-              Origin location
-            </label>
-            <div class="col-sm-10">
-              <%= select_tag(:origin_location_id, options_from_collection_for_select(Location.all, :id, :location_name, @day.origin_location_id), :class => "form-control") %>
-            </div>
-          </div>
-
-          <!-- Label and input for transportation -->
-          <div class="form-group">
-            <label for="transportation" class="col-sm-2 control-label">
-              Transportation
-            </label>
-            <div class="col-sm-10">
-              <textarea id="transportation" name="transportation" placeholder="Transportation" class="form-control" rows="3"><%= @day.transportation %></textarea>
-            </div>
-          </div>
-
-          <!-- Label and input for arrival_date -->
-          <div class="form-group">
-            <label for="arrival_date" class="col-sm-2 control-label">
-              Arrival date
-            </label>
-            <div class="col-sm-10">
-              <input type="text" id="arrival_date" name="arrival_date" placeholder="Arrival date" class="form-control" value="<%= @day.arrival_date %>">
-            </div>
-          </div>
-
-          <!-- Label and input for notes -->
-          <div class="form-group">
-            <label for="notes" class="col-sm-2 control-label">
-              Notes
-            </label>
-            <div class="col-sm-10">
-              <textarea id="notes" name="notes" placeholder="Notes" class="form-control" rows="3"><%= @day.notes %></textarea>
-            </div>
-          </div>
-
-          <!-- Label and input for lodging_name -->
-          <div class="form-group">
-            <label for="lodging_name" class="col-sm-2 control-label">
-              Lodging name
-            </label>
-            <div class="col-sm-10">
-              <textarea id="lodging_name" name="lodging_name" placeholder="Lodging name" class="form-control" rows="3"><%= @day.lodging_name %></textarea>
-            </div>
-          </div>
-
-          <!-- Label and input for itinerary_id -->
-          <div class="form-group">
-            <label for="itinerary_id" class="col-sm-2 control-label">
-              Itinerary
-            </label>
-            <div class="col-sm-10">
-              <input type="text" id="itinerary_id" name="itinerary_id" placeholder="Itinerary" class="form-control" value="<%= @day.itinerary_id %>">
-            </div>
-          </div>
-
-          <!-- Label and input for destination_location_id -->
-          <div class="form-group">
-            <label for="destination_location_id" class="col-sm-2 control-label">
-              Destination location
-            </label>
-            <div class="col-sm-10">
-              <%= select_tag(:destination_location_id, options_from_collection_for_select(Location.all, :id, :location_name, @day.destination_location_id), :class => "form-control") %>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <button class="btn btn-success">
-                Create Day
-              </button>
-              or
-              <a href="/days">Cancel</a>
-            </div>
-          </div>
-        </form>
-      </div>
+      <!-- End responsive panel example -->
     </div>
 
 </div>
+
+<script type="text/javascript">
+  $(function () {
+    $('#datetimepicker1').datetimepicker();
+  });
+</script>
 
 <!-- End responsive panel example -->
